# commos

./: CLAUDE.md  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml  conformance.yml  release.yml
conformance/: README.md  run.py
conformance/scenarios/: call-happy-path.json  call-policy-reject.json  callflow-publish-rollback.json  device-onboarding.json  identity-auth.json  message-send.json  scenario.schema.json  voicemail-on-no-answer.json
contracts/: README.md
contracts/json-schema/: common.schema.json  envelope.schema.json
contracts/json-schema/entities/: AIJob.schema.json  Agent.schema.json  AuditEntry.schema.json  Automation.schema.json  CDR.schema.json  Call.schema.json  CallFlow.schema.json  Capability.schema.json  Carrier.schema.json  Channel.schema.json  Conference.schema.json  CostCentre.schema.json  DID.schema.json  Department.schema.json  Device.schema.json  Extension.schema.json  Gateway.schema.json  IVR.schema.json  Identity.schema.json  MediaStream.schema.json  Message.schema.json  Object.schema.json  Organisation.schema.json  Participant.schema.json  Plugin.schema.json  Policy.schema.json  PresenceState.schema.json  Queue.schema.json  Recording.schema.json  Route.schema.json  Thread.schema.json  Trunk.schema.json  User.schema.json  VideoRoom.schema.json  Voicemail.schema.json  Webhook.schema.json
contracts/json-schema/events/: AIJobCompleted.schema.json  AIJobFailed.schema.json  AIJobQueued.schema.json  AIJobStarted.schema.json  AgentStateChanged.schema.json  AuditEntryRecorded.schema.json  AuthenticationFailed.schema.json  AuthenticationRequested.schema.json  AuthenticationSucceeded.schema.json  AutomationTriggered.schema.json  BillingGenerated.schema.json  CallAnswered.schema.json  CallBusy.schema.json  CallEnded.schema.json  CallFailed.schema.json  CallFlowPublished.schema.json  CallHeld.schema.json  CallNoAnswer.schema.json  CallRejected.schema.json  CallResumed.schema.json  CallRinging.schema.json  CallStarted.schema.json  CallTransferred.schema.json  CapabilityGranted.schema.json  CapabilityRevoked.schema.json  CertificateIssued.schema.json  CertificateRenewed.schema.json  CertificateRevoked.schema.json  ChannelCreated.schema.json  ConferenceEnded.schema.json  ConferenceStarted.schema.json  DeviceApproved.schema.json  DeviceDetected.schema.json  DeviceRejected.schema.json  (+40 more)
contracts/openapi/: commos.openapi.yaml
reference/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  rust-toolchain.toml
reference/.cargo/: config.toml
reference/crates/commos-core/: Cargo.toml
reference/crates/commos-core/src/: common.rs  error.rs  event.rs  lib.rs
reference/crates/commos-core/src/entities/: call.rs  call_flow.rs  carrier.rs  cdr.rs  channel.rs  device.rs  did.rs  extension.rs  forwarding.rs  gateway.rs  ivr.rs  message.rs  mod.rs  object.rs  participant.rs  presence_state.rs  queue.rs  recording.rs  ring_group.rs  route.rs  thread.rs  trunk.rs  user.rs  video_room.rs  voicemail.rs  webhook.rs
reference/crates/commos-core/src/events/: agent_state_changed.rs  billing_generated.rs  call_answered.rs  call_busy.rs  call_ended.rs  call_failed.rs  call_flow_published.rs  call_held.rs  call_no_answer.rs  call_rejected.rs  call_resumed.rs  call_ringing.rs  call_started.rs  call_transferred.rs  channel_created.rs  device_approved.rs  device_detected.rs  device_rejected.rs  device_replacement_started.rs  device_retired.rs  message_sent.rs  mod.rs  participant_joined.rs  participant_left.rs  presence_changed.rs  recording_uploaded.rs  thread_opened.rs  user_activated.rs  user_created.rs  user_deactivated.rs  user_suspended.rs  user_updated.rs  video_room_started.rs  voicemail_received.rs  webhook_delivered.rs  webhook_delivery_failed.rs
reference/crates/commosd/: Cargo.toml  build.rs
reference/crates/commosd/src/: bus.rs  config.rs  introspect.rs  main.rs  media.rs  metrics.rs  net.rs  objectstore.rs  relay.rs  state.rs  store.rs  telemetry.rs
reference/crates/commosd/src/api/: admin.rs  agents.rs  auth.rs  call_flows.rs  calls.rs  cdrs.rs  channels.rs  config.rs  dashboard.rs  directory.rs  health.rs  introspect.rs  ivrs.rs  messages.rs  mod.rs  objects.rs  onboarding.rs  peer.rs  presence.rs  problem.rs  provision.rs  queues.rs  recordings.rs  registrations.rs  ringing.rs  threads.rs  trunking.rs  video_rooms.rs  voicemail.rs  webhooks.rs
reference/crates/commosd/src/control/: agents.rs  billing.rs  callflow.rs  configexport.rs  dialplan.rs  ivr.rs  messaging.rs  mod.rs  objects.rs  onboarding.rs  policy.rs  provisioning.rs  queue.rs  rating.rs  realtime.rs  recordings.rs  registrations.rs  ringing.rs  ringplan.rs  ringresolve.rs  routing.rs  smtp.rs  trunking.rs  voicemail.rs  voicemail_email.rs  webhook_delivery.rs  webhooks.rs
reference/crates/commosd/src/sip/: codec.rs  digest.rs  dtmf.rs  g711.rs  ivr.rs  message.rs  mod.rs  moh.rs  queuewait.rs  reboot.rs  rtp.rs  sdes.rs  server.rs  srtp.rs  tls.rs  transport.rs
reference/crates/commosd/src/store/: mem.rs  mod.rs  postgres.rs  sqlite.rs
reference/deploy/: commosd.service  docker-compose.yml  pbx.example.yaml
reference/docs/: postgres.md
reference/scripts/: install.sh  install_test.sh  smoke.sh
spec/: CONVENTIONS.md  GLOSSARY.md  NEXT_STEPS.md  README.md
spec/000-philosophy/: README.md
spec/001-prd/: README.md  features.md
spec/002-domain-model/: README.md  entities.md  state-machines.md  workloads.md
spec/003-architecture/: README.md  components.md
spec/004-api/: README.md  endpoints.md
spec/005-events/: README.md  catalog.md
spec/006-database/: README.md  schema-overview.md
spec/007-communications/: README.md  state-mapping.md
spec/008-provisioning/: README.md  provisioner-contract.md
spec/009-security/: README.md  capabilities.md
spec/010-billing/: README.md  model.md
spec/011-ai/: README.md
spec/012-plugin-sdk/: README.md
spec/013-ui/: README.md
spec/014-deployment/: README.md
spec/015-observability/: README.md
spec/016-testing/: README.md
spec/017-performance/: README.md
spec/018-engineering/: README.md
spec/019-adrs/: README.md
(+127 files in other folders)
