[package]
name = "commosd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CommOS single self-contained binary — control plane + media plane in one process (CMOS-14-DEP-001/010)."

[[bin]]
name = "commosd"
path = "src/main.rs"

[dependencies]
commos-core = { path = "../commos-core" }
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
sqlx.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
anyhow.workspace = true
# Pure-Rust crypto for HS256 JWT bearer verification (keeps the arm64 cross-build clean —
# deliberately NOT jsonwebtoken/ring/openssl).
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
